--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!this will be commented out>
 
 <!everything is wrapped in html, then it's head and body
 within head is title, within body are headers and paragraph>
@@ -24,7 +24,9 @@ within head is title, within body are headers and paragraph>
 		<p>
 			<h1> Meow to the World </h1>
 			<a href = "https://www.instagram.com/p/8v_ph9KgpJ/?taken-by=simonsinek&hl=en"> At The Whitney </a>
-			<img src = whitney.png>  </img>
+			<br>
+			<img src = move.jpg>  </img>
+			<br>
 			My <em> favorite </em> site <strong> is </strong> always <a href== "kitties.com" > kitties.com </a> 
 		</p>
 
@@ -41,14 +43,16 @@ within head is title, within body are headers and paragraph>
 
  		<!this fixes the text to courier>
  		<pre>
-	 		Kittens are great because they don't talk back. 
+	 		<h1> Kittens are great because <br> they don't talk back. </h1>
+	 		<center>	
 	 		<img src = kittycup.jpg> 
+	 	</center>
  		</pre>
 
 
  		<p>
  			<!Notice that colors and html references describe the style or the href inside the first tag>
-		 	<h1 style = "color:red;"> Kittens are never red </h1>
+		 	<h1 style = "color:red;"> Note that kittens are never red </h1>
  		</p>
 	</body>
 
