i made one change to my index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ within head is title, within body are headers and paragraph>
  		
 
 		<p>
-			<h1> Meow to the World </h1>
+			<h1> Meow to the World and to the Universe </h1>
 			<a href = "https://www.instagram.com/p/8v_ph9KgpJ/?taken-by=simonsinek&hl=en"> At The Whitney </a>
 			<br>
 			<img src = move.jpg>  </img>
