adding new photo and style sheet

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ within head is title, within body are headers and paragraph>
 	<head>
 		<meta charset="utf-8">
         <title>My Website</title>
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
 
 		<!woops didn't have tags! Hello World!>
 	</head>
@@ -25,9 +26,9 @@ within head is title, within body are headers and paragraph>
 			<h1> Meow to the World and to the Universe </h1>
 			<a href = "https://www.instagram.com/p/8v_ph9KgpJ/?taken-by=simonsinek&hl=en"> At The Whitney </a>
 			<br>
-			<img src = move.jpg>  </img>
+			<img src = Thorichka.jpg style="width:304px;height:228px;" data-rotate="90">  </img>
 			<br>
-			My <em> favorite </em> site <strong> is </strong> always <a href== "kitties.com" > kitties.com </a> 
+			<h2> My <em> favorite </em> site <strong> is </strong> always <a href== "kitties.com" > kitties.com </a> </h2>
 		</p>
 
 
@@ -37,7 +38,7 @@ within head is title, within body are headers and paragraph>
  		 
 
  		<!This put a  line on the page>	
- 		<hr> More on kittens...</hr>
+ 		<hr> <h1> More on kittens...</h1> </hr>
 
  	
 
