update contact page

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         
 
         <p> <h1> Welcome </h1>
-            This page is devoted to Minnie and Thorie, adventures extraordinaire. Minne and Thorie are bilingual cats living in New Jersey. They overcame near death in 2013 and were rescued by the Vasilaky's. Live every day like it's you last, because one day it will be.
+            This page is devoted to Minnie and Thorie, adventures extraordinaire. Minne and Thorie are bilingual cats living in New Jersey. They overcame imminent death in 2013 and were rescued by the Vasilakys. Live every day like it's you last, because one day it will be.
 
             <hr>
             <h1> For more information.</h1> 
