--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,9 @@
     <!-- Page Content -->
     <div class="container">
 
-    
-
         <p> <h1> Welcome </h1>
             This page is devoted to Minnie and Thorie, adventures extraordinaire. Minne and Thorie are bilingual cats living in New Jersey. They overcame imminent death in 2013 and were rescued by the Vasilakys. Live every day like it's you last, because one day it will be.
+            Minnie and Thori follow two live feeds: <a href = "https://twitter.com/EmrgencyKittens"> Emergency Kittens</a> and <a href="https://twitter.com/CuteEmergency"> Cute Emergency. </a> 
 
             <hr>
             <h1> For more information.</h1> 
