update contact page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Minnie and Thori's Page
+                <h1 class="page-header">Minnie and Thorie's Page
                     <small>Adventures Big and Small</small>
                 </h1>
             </div>
