trying to get rid of the sub heading

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>4 Col Portfolio - Start Bootstrap Template</title>
+    <title>Minnie and Thorie</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
             Minnie and Thorie follow two live feeds: <a href = "https://twitter.com/EmrgencyKittens"> Emergency Kittens</a> and <a href="https://twitter.com/CuteEmergency"> Cute Emergency</a>, and hoped to be featured on there some day. Live every day like it's you last, because one day it will be.
 
             <hr>
-            <h1> For more information.</h1> 
+            <h1> For more information</h1> 
             Contact: Kathryn Vasilaky, knv4 at columbia dot edu 
         </p>
 
