--- a/publications.html
+++ b/publications.html
@@ -39,39 +39,39 @@
 <p>
 
 	<h2>Publications</h2>
-	Vasilaky, Kathryn and Kenneth Leonard (2014), “As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda.” Forthcoming, <em>Economic Development and Cultural Change</em>.<em> </em>
+	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.<em> </em>
 
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), “Scaling the Demand for Index Insurance,” R&R<i>, Journal of Development Studies. </i>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R<i>, Journal of Development Studies. </i>
 	<br></br>
-	Vasilaky, Kathryn (2013), “Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?”<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
+	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
 
 	<h2><strong>Under Review</strong></h2>
-	Vasilaky, Kathryn and Daniel Osgood (2016), “Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance,” <em>Under Review.</em>
+	Vasilaky, Kathryn and Daniel Osgood (2016), "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," <em>Under Review.</em>
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), “Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures” <em>Under Review.</em>
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures" <em>Under Review.</em>
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam (2016), “By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda.” <em>Under Review.</em>
+	Vasilaky, Kathryn and Asif Islam (2016), "By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda." <em>Under Review.</em>
 	<br></br>
 	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Women's Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Lab Experiment and a Randomized Control Trial in Uganda</a>," <em>Under Review</em>.
 	<br></br>
 
 
 	<h2>Working Papers</h2>
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), “Hierarchal Bayesian Estimation of Weather Index Insurance,” Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
-	Vasilaky, Kathryn (2016), “An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis,” Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
+	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis," Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
 	<br></br>
-	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), “Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?” Jameel Poverty Action Lab, <em>Working Paper.</em>
+	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, <em>Working Paper.</em>
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock (2015), “Traversing the Landscape of Economic Power.” <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
+	Vasilaky, Kathryn and Michelle Brock (2015), "Traversing the Landscape of Economic Power." <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
 	<br></br>
 
 
 	<h2><strong>Reports</strong></h2>
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), “Girls’ Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda.” World Bank Research Paper Vol. 12, No. 33
+	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls’ Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard (2015), “Policy Implications of Social Networks and Learning,” Gender Innovation Lab Policy Brief, World Bank Report Number 103850.
+	Vasilaky, Kathryn and Kenneth Leonard (2015), "Policy Implications of Social Networks and Learning," Gender Innovation Lab Policy Brief, World Bank Report Number 103850.
 
 
 </p>
