--- a/posts.html
+++ b/posts.html
@@ -129,6 +129,6 @@ Econometric issues at <a href="http://iamjustapointe.blogspot.com/">iamjustapoin
 		</div>
 		
 <div id="footer">
-			Copyright © 2016 | All Rights Reserved </div>
+			Copyright @ 2016 | All Rights Reserved </div>
 </body>
 </html>
