--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<a href="index.html">home</a><br />
 								<a href="publications.html">publications</a><br />
 								<a href="research.html">research</a><br />
-								<a href="posts.html">talks and posts</a><br />
+								<a href="posts.html">posts and talks</a><br />
 								<a href="links.html">links</a>
 				 			 </div>
 							 
