--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <title>Kathryn Vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
