--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
 <body>
 		<div id="title">
 				<a href="#"><img src="images/header.png" alt="" border="0" title="" /></a><br />
-				<h1>Kathryn <font color="#0183E5">Vasilaky</font></h1>
+				<h1>kathryn <font color="#0183E5">vasilaky</font></h1>
 				<p>
 					
 				</p>
