--- a/research.html
+++ b/research.html
@@ -2,15 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<title>Kathryn Vasilaky</title>
+<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
+<title>kathryn vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 		<div id="title">
 				<a href="#"><img src="images/header.png" alt="" border="0" title="" /></a><br />
-				<h1>kathryn <font color="#0183E5">vasilaky</font></h1>
+				<h1>kathryn <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
 				<p>
 					
 				</p>
