--- a/posts.html
+++ b/posts.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-<title>Kathryn Vasilaky</title>
+<title>kathryn vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,7 +25,7 @@
 								<a href="publications.html">publications</a><br />
 								<a href="research.html">research</a><br />
 								<a href="posts.html">posts and talks</a><br />
-								<a href="links.html">links</a>
+
 				 			 </div>
 							 
 						
