--- a/posts.html
+++ b/posts.html
@@ -34,11 +34,11 @@
 							</div>
 				<div id="content">
 				
-						<h1>Talks and Posts</h1>
+						<h1>talks and posts</h1>
 						
 						<p>	
 <br></br>			
-<strong>Blog posts</strong>
+<strong>blog posts</strong>
 <br></br>
 <a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">World Bank Policy brief </a> on using local social networks in agricultural training.
 <br></br>
