--- a/publications.html
+++ b/publications.html
@@ -34,11 +34,11 @@
 							</div>
 				<div id="content">
 				
-<h1>Bio</h1>
+<h1>publications</h1>
 						
 <p>
 
-	<h2>Publications</h2>
+	<h2>published</h2>
 	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.<em> </em>
 
 	<br></br>
@@ -57,7 +57,7 @@
 	<br></br>
 
 
-	<h2>Working Papers</h2>
+	<h2>working papers</h2>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
 	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis," Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
@@ -68,7 +68,7 @@
 	<br></br>
 
 
-	<h2><strong>Reports</strong></h2>
+	<h2><strong>reports</strong></h2>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls’ Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard (2015), "Policy Implications of Social Networks and Learning," Gender Innovation Lab Policy Brief, World Bank Report Number 103850.
