--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 <h1>publications</h1>
 						
 <p>
-
+	<br></br>
 	<h2>published</h2>
 	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.<em> </em>
 
@@ -46,7 +46,7 @@
 	<br></br>
 	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
 
-	<h2><strong>Under Review</strong></h2>
+	<h2><strong>under review</strong></h2>
 	Vasilaky, Kathryn and Daniel Osgood (2016), "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," <em>Under Review.</em>
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures" <em>Under Review.</em>
