--- a/publications.html
+++ b/publications.html
@@ -34,11 +34,11 @@
 							</div>
 				<div id="content">
 				
-<h1>publications</h1>
+
 						
 <p>
 	<br></br>
-	<h2>published</h2>
+	<strong>published</strong>
 	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.<em> </em>
 
 	<br></br>
