--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,8 @@
 	<br></br>
 	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
 
-	<strong>under review</strong>
+	<h1>under review</h1>
+
 	Vasilaky, Kathryn and Daniel Osgood (2016), "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," <em>Under Review.</em>
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures" <em>Under Review.</em>
@@ -57,7 +58,8 @@
 	<br></br>
 
 
-	<h2>working papers</h2>
+	<h1>working papers</h1>
+	
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
 	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis," Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
