--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 							</div>
 				<div id="content">
 				
-
+<h1>publications</h1>
 						
 <p>
 	<br></br>
@@ -71,7 +71,7 @@
 
 
 	<h1>reports</h1>
-	
+
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls’ Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard (2015), "Policy Implications of Social Networks and Learning," Gender Innovation Lab Policy Brief, World Bank Report Number 103850.
