--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
+<meta http-equiv=Content-Type content="text/plain; charset=iso-8859-1">
 <title>kathryn vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
