--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.
 
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R<i>, Journal of Development Studies. </i>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies.<em>
 	<br></br>
 	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
@@ -72,7 +72,7 @@
 
 	<h1>reports</h1>
 
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls’ Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33
+	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard (2015), "Policy Implications of Social Networks and Learning," Gender Innovation Lab Policy Brief, World Bank Report Number 103850.
 
