--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, <em>Economic Development and Cultural Change</em>.
 
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies.<em>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies.</em>
 	<br></br>
 	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em>American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
