--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
+<meta http-equiv=Content-Type content="text/plain; charset=iso-8859-1">
 <title>kathryn vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+
 		<div id="title">
 				<a href="#"><img src="images/header.png" alt="" border="0" title="" /></a><br />
 				<h1>kathryn <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
@@ -23,8 +24,11 @@
 							
 							<div id="menu">
 								<a href="index.html">home</a><br />
+
 								<a href="publications.html">publications</a><br />
+
 								<a href="research.html">research</a><br />
+								
 								<a href="posts.html">posts and talks</a><br />
 
 				 			 </div>
