--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 								<br></br>
 								<a href="research.html">research</a><br />
 								<br></br>
+								<a href="teaching.html">teaching</a><br />
+								<br></br>
 								<a href="posts.html">posts and talks</a><br />
 
 				 			 </div>
