--- a/posts.html
+++ b/posts.html
@@ -22,8 +22,13 @@
 							
 							<div id="menu">
 								<a href="index.html">home</a><br />
+								<br></br>
 								<a href="publications.html">publications</a><br />
+								<br></br>
 								<a href="research.html">research</a><br />
+								<br></br>
+								<a href="teaching.html">teaching</a><br />
+								<br></br>
 								<a href="posts.html">posts and talks</a><br />
 
 				 			 </div>
