--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@ Coverage on this research is in:
 </ul>
 
 </br>
-<strong>Measuring the Impact of Educational Insurance Games on Weather Insurance Demand, With Rahel Diro, Michael Norton, Geoff McCarney, and Daniel Osgood.</strong>
+<strong>Measuring the Impact of Educational Insurance Games on the Demand for Index Insurance, With Rahel Diro, Michael Norton, Geoff McCarney, and Daniel Osgood.</strong>
 <br></br>
 
 There is increasing concern that voluntary index insurance will fail to scale with sustainable impacts unless it can transition beyond the premium subsidy and liquidity programs that would be prohibitively expensive to donors as projects grow. Because farmer's index insurance demand choices are typically studied in the non-market environment of large subsidies, mandatory purchase requirements or research oriented, but non-commercially viable insurance interventions, there is little known about developing farmer behavior in the market-priced, more commercially focused context necessary to understand for commercial scaling. We therefore study the demand for index insurance in the context of an unsubsidized, non-loan linked commercial insurance program in Ethiopia that has scaled to tens of thousands of farms through a mix of labor based liquidity programs and cash only sales. Using a randomly administered educational game, we estimate that the total impact of offerring financial education increased the likelihood of purchase by 11% across our study sample, and increase the amount purchased by 34%, on average. [This work was supported by NSF-SES0345840, NSF-SES0957516, with the Center for Research on Environmental Decisions (<a href="http://cred.columbia.edu/">CRED</a>) and United States Agency for International Development (USAID) AID-0AA-A-1-00011.] <em>Revise and Resubmit Journal of Development Studies<strong>.</strong></em>
@@ -160,6 +160,6 @@ We are developing the software for a SMS based platform that collects data on fa
 		</div>
 		
 <div id="footer">
-			Copyright © 2016 | All Rights Reserved </div>
+			Copyright @ 2016 | All Rights Reserved </div>
 </body>
 </html>
