--- a/publications.html
+++ b/publications.html
@@ -94,6 +94,6 @@
 		</div>
 		
 <div id="footer">
-			Copyright © 2016 | All Rights Reserved </div>
+			Copyright @ 2016 | All Rights Reserved </div>
 </body>
 </html>
