--- a/posts.html
+++ b/posts.html
@@ -83,9 +83,9 @@ March 27, 2014
 
 <h1>seminars</h1>
 
-Seminar Speaker, “An Iterative Approach to the Tikhanov Inverse Problem with a Stopping Rule,” New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
+Seminar Speaker, "An Iterative Approach to the Tikhanov Inverse Problem with a Stopping Rule," New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
 <br></br>
-Seminar Speaker, “Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos,” Paris School of Economics, Paris, France, 4/15/16.
+Seminar Speaker, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos," Paris School of Economics, Paris, France, 4/15/16.
 
 <br></br>
 Seminar Speaker, "<a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=CSAE2016&paper_id=436">Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures</a>," CSAE Conference 2016: Economic Development in Africa, St Catherine's College, Oxford University 3/20/16
