--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 						<h1>bio</h1>
 						
 						<p>
-						I received my PhD in Agricultural and Resource Economics from the University of Maryland, with a focus on development economics and experimental design. I received my BA in Math and Economics from Columbia University and returned to Columbia University for a postdoc at the Earth Institute (2013-present). 
+						I received my PhD in Agricultural and Resource Economics from the University of Maryland, with a focus on development economics and experimental design. I also earned a certificat of Demography from the Maryland Population Research Center. I received my BA in Math and Economics from Columbia University and returned to Columbia University for a postdoc at the Earth Institute (2013-present). 
 <br></br>
-						My research interests are in how groups and social networks intersect with learning and technology adoption, as well as how information is disseminated - with incentives, via networks, or with technology. My secondary interest is in regularization methods (Tikhanov/ridge regression) that address the frequently occurring problem of highly correlated attribute matrices in econometrics and big data. 
+				
+						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate. As a result, my work is interdisciplinary – involving agronomists, engineers and climate modelers. My secondary work is in regularization methods that address the frequently occurring problems in econometrics and big data when the attribute matrix is high dimensional and covariates are correlated. 
 
 
 						</p>
