--- a/posts.html
+++ b/posts.html
@@ -30,6 +30,8 @@
 								<a href="teaching.html">teaching</a><br />
 								<br></br>
 								<a href="posts.html">posts and talks</a><br />
+								<br></br>
+								<a href="field.html">grants & field work</a><br />
 
 				 			 </div>
 							 
