--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<h1>pages</h1>
 							
 							<div id="menu">
-								<a href="index.html">home</a><br />
+								<a href="index.html">bio</a><br />
 								<br></br>
 								<a href="publications.html">publications</a><br />
 								<br></br>
