--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
 						<h1>pages</h1>
 							
 							<div id="menu">
-								<a href="index.html">home</a><br />
+								<a href="index.html">bio</a><br />
 								<br></br>
 								<a href="publications.html">publications</a><br />
 								<br></br>
@@ -33,6 +33,8 @@
 								<a href="field.html">grants & field work</a><br />
 								<br></br>
 								<a href="posts.html">posts and talks</a><br />
+								<br></br>
+								<a href="cv.html">cv</a><br />
 
 
 				 			 </div>
