--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 								<a href="field.html">grants & field work</a><br />
 								<br></br>
 								<a href="posts.html">posts and talks</a><br />
-
+								<br></br>
+								<a href="cv.html">cv</a><br />
 				 			 </div>
 							 
 						
