--- a/field.html
+++ b/field.html
@@ -31,7 +31,7 @@
 								<br></br>
 								<a href="teaching.html">teaching</a><br />
 								<br></br>
-								<a href="field.html">grants & field work</a><br />
+								<a href="field.html">grants, field work</a><br />
 								<br></br>
 								<a href="posts.html">posts and talks</a><br />
 								<br></br>
@@ -70,6 +70,7 @@ India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute,
 Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, May 2015. 
 <br></br>
 Indonesia (Indramayu) Weather Uncertainty and Index Insurance in El Nino Years. International Research Institute for Climate and Society, Columbia University, June 2014. 
+<br></br>
 India (Bihar) Video Based Extension, Self Efficacy, and Perception of Risk. Jameel Poverty Action Lab, Bihar, India May 2014 and May 2015.
 <br></br>
 Ethiopia (Northern) Weather Index Insurance. International Research Institute for Climate and Society, Columbia University, September 2013.
