--- a/posts.html
+++ b/posts.html
@@ -29,7 +29,7 @@
 								<br></br>
 								<a href="teaching.html">teaching</a><br />
 								<br></br>
-								<a href="field.html">grants & field work</a><br />
+								<a href="field.html">grants, field work</a><br />
 								<br></br>
 								<a href="posts.html">posts and talks</a><br />
 								<br></br>
