--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,8 @@
 <p>
 
 
-	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, April 2018, <em>Economic Development and Cultural Change</em>.
+	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep?
+Mechanisms of Information Exchange in Social Networks in Rural Uganda." Forthcoming, April 2018, <em>Economic Development and Cultural Change</em>.
 
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies.</em>
