--- a/teaching.html
+++ b/teaching.html
@@ -50,7 +50,7 @@
 						
 						<p>
 
-Columbia University, Earth Institute, Co-Instructor (with Joel Cohen), SDEV W2300 Challenges of Sustainable Development, W4242 Introduction to Data Science, Spring 2016
+Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300 Challenges of Sustainable Development, W4242 Introduction to Data Science, Spring 2016
 	<br></br>
 Statistics.com, An Introduction to Queries and Data Munging in PostgreSQL and R, March 2013
 	<br></br>
