--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 						I received my PhD in Agricultural and Resource Economics from the University of Maryland, with a focus on development economics and experimental design. I also earned a certificate of Demography from the Maryland Population Research Center. I received my BA in Math and Economics from Columbia University and returned to Columbia University for a postdoc at the Earth Institute (2013-present). 
 <br></br>
 				
-						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies. As a result, my work is interdisciplinary - involving agronomists, engineers and climate modelers. My secondary work is in regularization methods that address the frequently occurring problems in econometrics and big data when the attribute matrix is high dimensional and covariates are correlated. 
+						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies. As a result, my work is interdisciplinary - involving agronomists, engineers and climate modelers. 
+						<br></br>
+						My secondary work is in regularization methods that address the frequently occurring problems in econometrics and big data when the attribute matrix is high dimensional and covariates are correlated. 
 
 
 						</p>
