--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,10 @@
 
 	Vasilaky, Kathryn and Daniel Osgood (2016), "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," <em>Under Review.</em>
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures" <em>Under Review.</em>
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "<a http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures" </a><em>Under Review.</em>
+
+
+
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam (2016), "By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda." <em>Under Review.</em>
 	<br></br>
