--- a/posts.html
+++ b/posts.html
@@ -100,20 +100,21 @@ March 27, 2014
 <br></br>
 
 <h1>seminars</h1>
-Seminar Speaker, "An Iterative Approach to the Tikhanov Inverse Problem with a Stopping Rule," New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
-http://steinhardt.nyu.edu/priism/newsandevents/seminars
+Seminar Speaker, <a href="http://steinhardt.nyu.edu/priism/newsandevents/seminars"> An Iterative Approach to the Tikhanov Inverse Problem with a Stopping Rule,</a> New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
 <br></br>
-Speaker, <a href="https://2016.pygotham.org/talks/374/it-s-raining-it-s-pouring/"> It's Raining, it's Pouring? A Web and SMS Application in Flask and Twilio to call Farmers </a>
+Workshop Speaker, <a href="merltech.org/agenda">“From RCT’s to A/B: Choosing Lean Methods for Evaluation”, Monitoring, Evaluation, Research and Learning in Development, </a> Washington DC, FHI360 10/3/16
 <br></br>
-Seminar Speaker, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos," Paris School of Economics, Paris, France, 4/15/16.
+Speaker, <a href="https://2016.pygotham.org/talks/374/it-s-raining-it-s-pouring/"> It's Raining, it's Pouring? A Web and SMS Application in Flask and Twilio to call Farmers </a>, Pygotham, 7/16/16
+<br></br>
+Seminar Speaker, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos," Paris School of Economics, Paris, France, 4/15/16
 <br></br>
 Seminar Speaker, "<a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=CSAE2016&paper_id=436">Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures</a>," CSAE Conference 2016: Economic Development in Africa, St Catherine's College, Oxford University 3/20/16
 <br></br>
 Workshop Speaker, <a href ="http://merltech.org/agenda/">From RCT’s to A/B: Choosing Lean Methods for Evaluation</a>, Monitoring, Evaluation, Research and Learning in Development, Washington DC, FHI360 10/3/16
 <br></br>
-<a href="http://www.meetup.com/Action-Design-NYC/events/226355787/">Tech, Development Economics, and Experiment Design</a> at <a href="http://reboot.org/">Reboot</a>.org, November 11th, New York, New York.
+<a href="http://www.meetup.com/Action-Design-NYC/events/226355787/">Tech, Development Economics, and Experiment Design</a> at <a href="http://reboot.org/">Reboot</a>.org, New York, New York, Reboot, 11/11/15
 <br></br>
-<a href="http://nyc2015.pydata.org/">Pydata</a>, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An iterative approach to inverse problems using Python's NumPy</a>, November 11th, New York, New York.
+<a href="http://nyc2015.pydata.org/">Pydata</a>, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An iterative approach to inverse problems using Python's NumPy</a>, New York, New York, Pydata, 11/11/15
 <br></br>
 Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">“An Iterative Approach to Inverse Problems using Python's Numpy,” </a> Py-gotham, New York NY 8/15/15
 <br></br>
