--- a/posts.html
+++ b/posts.html
@@ -118,13 +118,13 @@ Workshop Speaker, <a href ="http://merltech.org/agenda/">From RCT’s to A/B: Ch
 <br></br>
 Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">“An Iterative Approach to Inverse Problems using Python's Numpy,” </a> Py-gotham, New York NY 8/15/15
 <br></br>
-<a href="https://sites.google.com/a/brown.edu/neudc-2015/home">Northest Universities Development Consortium</a>,<a href="http://editorialexpress.com/conference/NEUDC2015/program/NEUDC2015.html"> Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos</a>, November 8, Providence, Rhode Island.
+<a href="https://sites.google.com/a/brown.edu/neudc-2015/home">Northest Universities Development Consortium</a>,<a href="http://editorialexpress.com/conference/NEUDC2015/program/NEUDC2015.html"> Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos</a>, Providence, Rhode Island, 11/8/15
 <br></br>
-<a href="http://utdallas.edu/~jdf130030/esaindex.html">North-American Economic Science Association</a>, Motherhood, Sisterhood and Adolescence: Is Competitiveness Socialized? October 24, Dallas, Texas.
+<a href="http://utdallas.edu/~jdf130030/2015_ESA_North-America_Dallas.pdf">North-American Economic Science Association</a>, Motherhood, Sisterhood and Adolescence: Is Competitiveness Socialized? Dallas, Texas, 10/24/15
 <br></br>
-Inverting matrices using an iterative approach to the <a href="https://pygotham.org/2015/talks/207/an-iterative-approach-to">Tikhonov Regularization Problem</a> at<a href="https://pygotham.org"> Pygotham</a> on August 15-16 with <a href="http://www.meetup.com/NYC-PyLadies/events/224648949/">Pyladies session</a>.
+An iterative approach to the inverse problem in Numpy <a href="https://pygotham.org/2015/talks/207/an-iterative-approach-to">Tikhonov Regularization Problem</a> at<a href="https://pygotham.org"> Pygotham</a> on August 15-16 with <a href="http://www.meetup.com/NYC-PyLadies/events/224648949/">Pyladies session</a>.
 <br></br>
-Visitor at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft Research New England </a>August 17-21st.
+Visitor at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft Research New England </a>8/17-21/15.
 <br></br>
 Speaker, "Networks and Sustainable Development," <a href="http://pintofscience.us/event/earth-ecology-and-environmental-engineering/">Pint of Science</a>, New York NY 5/18/15
 <br></br>
