--- a/publications.html
+++ b/publications.html
@@ -79,10 +79,9 @@
 
 
 	<h1>working papers</h1>
-
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
+	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
 	<br></br>
-	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis," Columbia University, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, <em>Working Paper.</em>
 	<br></br>
